# prepl

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
pwatch/: command_line.py  run_command.py  watch.py  watch_command.py
pwatch/test/: conftest.py  test_run_command.py  test_watch.py
pwatch/tests/: conftest.py  test_run_command.py
src/: CMakeLists.txt  pwatch.cc  test_helper.cc
tests/: test_helper  test_run_command.py
